tests/baselines/reference/nodeModulesAllowJsSynchronousCallErrors(module=nodenext).errors.txt
index.js(3,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(5,1): error TS8002: 'import ... =' can only be used in TypeScript files.
subfolder/index.js(3,1): error TS8002: 'import ... =' can only be used in TypeScript files.
subfolder/index.js(5,1): error TS8002: 'import ... =' can only be used in TypeScript files.


==== subfolder/index.js (2 errors) ====
    // cjs format file
    import {h} from "../index.js";
    import mod = require("../index.js");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import {f as _f} from "./index.js";
    import mod2 = require("./index.js");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    export async function f() {
        const mod3 = await import ("../index.js");
        const mod4 = await import ("./index.js");
        h();
    }
==== index.js (2 errors) ====
    // esm format file
    import {h as _h} from "./index.js";
    import mod = require("./index.js");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import {f} from "./subfolder/index.js";
    import mod2 = require("./subfolder/index.js");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    export async function h() {
        const mod3 = await import ("./index.js");
        const mod4 = await import ("./subfolder/index.js");
        f();
    }
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }